--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
         @font-face {
             font-family: 'MiFuente';
-            src: url('D:/Child and Christ.otf') format('opentype'); 
+            src: url('Child and Christ.otf') format('opentype');
             font-weight: normal;
             font-style: normal;
 }
