--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
 
         @font-face {
             font-family: 'MiFuente';
-            src: url('Child and Christ.otf') format('opentype');
+            src: url('Child and Christ.woff2') format('woff2'),
+            url('Child and Christ.otf') format('opentype');
             font-weight: normal;
             font-style: normal;
 }
@@ -391,3 +392,4 @@ Quiero que seas mi eterno amor, quiero que seas tú para siempre, quiero que sea
 
 </body>
 </html>
+
