--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
         @font-face {
             font-family: 'MiFuente';
-            src: url('Child and Christ.otf') format('opentype');
+            src: url('Child_and_Christ.otf') format('opentype');
             font-weight: normal;
             font-style: normal;
 }
@@ -391,5 +391,6 @@ Quiero que seas mi eterno amor, quiero que seas tú para siempre, quiero que sea
 
 </body>
 </html>
+
 
 
