--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
 
         @font-face {
             font-family: 'MiFuente';
-            src: url('Child_and_Christ.otf') format('opentype');
+            src: url("Child_and_Christ.woff2") format("woff2"),
+            url("Child_and_Christ.woff")  format("woff");
             font-weight: normal;
             font-style: normal;
 }
@@ -391,6 +392,7 @@ Quiero que seas mi eterno amor, quiero que seas tú para siempre, quiero que sea
 
 </body>
 </html>
+
 
 
 
